상관계수 수정

--- a/Jiyoung/JY_15_ticker_simpleEPO.ipynb
+++ b/Jiyoung/JY_15_ticker_simpleEPO.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "[261 rows x 15 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "BAC     173.222610   366.866789    591.496656   145.773168   44.257108  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,15 +739,15 @@
     "def portfolio_variance(weights, cov_matrix):\n",
     "    return np.dot(weights.T, np.dot(cov_matrix, weights))\n",
     "\n",
-    "# 상관관계 축소를 위한 λ 값 설정 (예시로 0.5를 사용)\n",
-    "lambda_shrinkage = 0.5\n",
+    "# 상관관계 축소를 위한 λ 값 설정 (예시로 0.75를 사용)\n",
+    "lambda_shrinkage = 0.75\n",
     "\n",
     "# Convert DataFrame to NumPy array and ensure it's symmetric\n",
     "cov_matrix_np = cov_matrix.to_numpy()\n",
     "cov_matrix_symmetric = (cov_matrix_np + cov_matrix_np.T) / 2\n",
     "\n",
     "# 상관관계 행렬 조정\n",
-    "corr_matrix = np.corrcoef(cov_matrix_symmetric)  # 상관관계 행렬 계산\n",
+    "corr_matrix = ticker_15.corr()  # 상관관계 행렬 계산\n",
     "identity_matrix = np.eye(corr_matrix.shape[0])\n",
     "adjusted_corr_matrix = (1 - lambda_shrinkage) * corr_matrix + lambda_shrinkage * identity_matrix\n",
     "\n",
@@ -777,30 +777,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'AAPL': 0.03333333338183161,\n",
+       "{'AAPL': 0.03333333333333333,\n",
        " 'AMZN': 0.03333333333333333,\n",
-       " 'NVDA': 0.03333333382929689,\n",
+       " 'NVDA': 0.033333333731323904,\n",
        " 'JPM': 0.03333333333333333,\n",
        " 'PG': 0.03333333333333333,\n",
-       " 'PFE': 0.13333333322871202,\n",
+       " 'PFE': 0.13333333333333333,\n",
        " 'JNJ': 0.03333333333333333,\n",
-       " 'KO': 0.13333333328987243,\n",
+       " 'KO': 0.13333333333333333,\n",
        " 'XOM': 0.13333333333333333,\n",
        " 'NEE': 0.13333333333333333,\n",
        " 'GOOGL': 0.03333333333333333,\n",
-       " 'MSFT': 0.033333333674163704,\n",
-       " 'TSLA': 0.03333333333333333,\n",
+       " 'MSFT': 0.03333333364474891,\n",
+       " 'TSLA': 0.03333333412625422,\n",
        " 'NKE': 0.03333333333333333,\n",
-       " 'BAC': 0.13333333310992196}"
+       " 'BAC': 0.13333333333333333}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
