--- a/Jiyoung/JY_30_ticker_simpleEPO.ipynb
+++ b/Jiyoung/JY_30_ticker_simpleEPO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "[261 rows x 30 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
        "[30 rows x 30 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,9 +1355,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jaekyunpark/anaconda3/lib/python3.11/site-packages/scipy/optimize/_optimize.py:353: RuntimeWarning: Values in x were outside bounds during a minimize step, clipping to bounds\n",
+      "  warnings.warn(\"Values in x were outside bounds during a \"\n"
+     ]
+    }
+   ],
    "source": [
     "# 30 종목에 대해 opt\n",
     "import numpy as np\n",
@@ -1367,15 +1376,15 @@
     "def portfolio_variance(weights, cov_matrix):\n",
     "    return np.dot(weights.T, np.dot(cov_matrix, weights))\n",
     "\n",
-    "# 상관관계 축소를 위한 λ 값 설정 (예시로 0.5를 사용)\n",
-    "lambda_shrinkage = 0.5\n",
+    "# 상관관계 축소를 위한 λ 값 설정 (예시로 0.75를 사용)\n",
+    "lambda_shrinkage = 0.75\n",
     "\n",
     "# Convert DataFrame to NumPy array and ensure it's symmetric\n",
     "cov_matrix_np = cov_matrix.to_numpy()\n",
     "cov_matrix_symmetric = (cov_matrix_np + cov_matrix_np.T) / 2\n",
     "\n",
     "# 상관관계 행렬 조정\n",
-    "corr_matrix = np.corrcoef(cov_matrix_symmetric)  # 상관관계 행렬 계산\n",
+    "corr_matrix = ticker_30.corr()  # 상관관계 행렬 계산\n",
     "identity_matrix = np.eye(corr_matrix.shape[0])\n",
     "adjusted_corr_matrix = (1 - lambda_shrinkage) * corr_matrix + lambda_shrinkage * identity_matrix\n",
     "\n",
@@ -1405,45 +1414,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'MSFT': 0.016666666666666666,\n",
-       " 'AMZN': 0.016666676730776448,\n",
+       " 'AMZN': 0.016666669927801678,\n",
        " 'NVDA': 0.016666666666666666,\n",
-       " 'AAPL': 0.016666666759563003,\n",
-       " 'GOOGL': 0.01666667276249135,\n",
+       " 'AAPL': 0.016666667017192355,\n",
+       " 'GOOGL': 0.016666668286611466,\n",
        " 'ADBE': 0.016666666666666666,\n",
-       " 'JNJ': 0.06666666666666667,\n",
+       " 'JNJ': 0.05406498890759566,\n",
        " 'PFE': 0.06666666666666667,\n",
        " 'MRK': 0.06666666666666667,\n",
-       " 'ABT': 0.05599760193116274,\n",
-       " 'PG': 0.016666674816256034,\n",
+       " 'ABT': 0.041362050306917385,\n",
+       " 'PG': 0.016666668736242424,\n",
        " 'KO': 0.06666666666666667,\n",
-       " 'JPM': 0.01666667405460323,\n",
+       " 'JPM': 0.022166481120752198,\n",
        " 'GS': 0.016666666666666666,\n",
        " 'CAT': 0.016666666666666666,\n",
-       " 'CVX': 0.01666666836925838,\n",
+       " 'CVX': 0.02742714636508379,\n",
        " 'XOM': 0.06666666666666667,\n",
-       " 'BA': 0.06666657724202117,\n",
+       " 'BA': 0.05759680460623201,\n",
        " 'TSLA': 0.016666666666666666,\n",
        " 'NEE': 0.06666666666666667,\n",
-       " 'NKE': 0.016666674692721723,\n",
+       " 'NKE': 0.016666668702481076,\n",
        " 'VZ': 0.06666666666666667,\n",
-       " 'CRM': 0.01666667503976828,\n",
+       " 'CRM': 0.016666669250692514,\n",
        " 'UNH': 0.016666666666666666,\n",
-       " 'WMT': 0.02733574881512344,\n",
-       " 'QCOM': 0.016666670965621005,\n",
+       " 'WMT': 0.04738251572050996,\n",
+       " 'QCOM': 0.016666667968150237,\n",
        " 'BRK-B': 0.016666666666666666,\n",
-       " 'V': 0.016666672819429424,\n",
-       " 'MCD': 0.016666667327196592,\n",
+       " 'V': 0.0166666682284304,\n",
+       " 'MCD': 0.016666666833361574,\n",
        " 'INTC': 0.06666666666666667}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1465,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1536,7 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>JNJ</td>\n",
-       "      <td>0.066667</td>\n",
+       "      <td>0.054065</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1542,7 +1551,7 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>ABT</td>\n",
-       "      <td>0.055998</td>\n",
+       "      <td>0.041362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -1557,7 +1566,7 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>JPM</td>\n",
-       "      <td>0.016667</td>\n",
+       "      <td>0.022166</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -1572,7 +1581,7 @@
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>CVX</td>\n",
-       "      <td>0.016667</td>\n",
+       "      <td>0.027427</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -1582,7 +1591,7 @@
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>BA</td>\n",
-       "      <td>0.066667</td>\n",
+       "      <td>0.057597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
@@ -1617,7 +1626,7 @@
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>WMT</td>\n",
-       "      <td>0.027336</td>\n",
+       "      <td>0.047383</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -1656,25 +1665,25 @@
        "3    AAPL  0.016667\n",
        "4   GOOGL  0.016667\n",
        "5    ADBE  0.016667\n",
-       "6     JNJ  0.066667\n",
+       "6     JNJ  0.054065\n",
        "7     PFE  0.066667\n",
        "8     MRK  0.066667\n",
-       "9     ABT  0.055998\n",
+       "9     ABT  0.041362\n",
        "10     PG  0.016667\n",
        "11     KO  0.066667\n",
-       "12    JPM  0.016667\n",
+       "12    JPM  0.022166\n",
        "13     GS  0.016667\n",
        "14    CAT  0.016667\n",
-       "15    CVX  0.016667\n",
+       "15    CVX  0.027427\n",
        "16    XOM  0.066667\n",
-       "17     BA  0.066667\n",
+       "17     BA  0.057597\n",
        "18   TSLA  0.016667\n",
        "19    NEE  0.066667\n",
        "20    NKE  0.016667\n",
        "21     VZ  0.066667\n",
        "22    CRM  0.016667\n",
        "23    UNH  0.016667\n",
-       "24    WMT  0.027336\n",
+       "24    WMT  0.047383\n",
        "25   QCOM  0.016667\n",
        "26  BRK-B  0.016667\n",
        "27      V  0.016667\n",
@@ -1682,7 +1691,7 @@
        "29   INTC  0.066667"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
