--- a/Jiyoung/JY_45_ticker_simpleEPO.ipynb
+++ b/Jiyoung/JY_45_ticker_simpleEPO.ipynb
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1722,7 +1722,7 @@
        "[44 rows x 44 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1759,15 +1759,15 @@
     "def portfolio_variance(weights, cov_matrix):\n",
     "    return np.dot(weights.T, np.dot(cov_matrix, weights))\n",
     "\n",
-    "# 상관관계 축소를 위한 λ 값 설정 (예시로 0.5를 사용)\n",
-    "lambda_shrinkage = 0.5\n",
+    "# 상관관계 축소를 위한 λ 값 설정 (예시로 0.75를 사용)\n",
+    "lambda_shrinkage = 0.75\n",
     "\n",
     "# Convert DataFrame to NumPy array and ensure it's symmetric\n",
     "cov_matrix_np = cov_matrix.to_numpy()\n",
     "cov_matrix_symmetric = (cov_matrix_np + cov_matrix_np.T) / 2\n",
     "\n",
     "# 상관관계 행렬 조정\n",
-    "corr_matrix = np.corrcoef(cov_matrix_symmetric)  # 상관관계 행렬 계산\n",
+    "corr_matrix = ticker_45.corr()  # 상관관계 행렬 계산\n",
     "identity_matrix = np.eye(corr_matrix.shape[0])\n",
     "adjusted_corr_matrix = (1 - lambda_shrinkage) * corr_matrix + lambda_shrinkage * identity_matrix\n",
     "\n",
@@ -1797,59 +1797,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'AAPL': 0.011363636365234376,\n",
-       " 'GOOGL': 0.011363636367562843,\n",
-       " 'MSFT': 0.011363636363636364,\n",
+       "{'AAPL': 0.011363636520079684,\n",
+       " 'GOOGL': 0.011363636526228198,\n",
+       " 'MSFT': 0.011363636445567668,\n",
        " 'NVDA': 0.011363636363636364,\n",
-       " 'AMD': 0.011363636380883358,\n",
-       " 'ORCL': 0.011363636398234685,\n",
-       " 'CRM': 0.01136363637939241,\n",
+       " 'AMD': 0.011363636698016882,\n",
+       " 'ORCL': 0.011363636602244293,\n",
+       " 'CRM': 0.011363636937996118,\n",
        " 'INTC': 0.045454545454545456,\n",
-       " 'CSCO': 0.045454545454545456,\n",
-       " 'JPM': 0.011363636363636364,\n",
+       " 'CSCO': 0.04545454541262168,\n",
+       " 'JPM': 0.011363636431537589,\n",
        " 'GS': 0.011363636363636364,\n",
-       " 'BAC': 0.045454545454545456,\n",
-       " 'MS': 0.011363636377414542,\n",
+       " 'BAC': 0.045454545370954724,\n",
+       " 'MS': 0.011363636492399389,\n",
        " 'AXP': 0.011363636363636364,\n",
-       " 'C': 0.04545454545303624,\n",
-       " 'JNJ': 0.01136363639982292,\n",
-       " 'UNH': 0.011363636381116789,\n",
-       " 'PFE': 0.045454545454545456,\n",
-       " 'ABBV': 0.011363636380238178,\n",
-       " 'MRK': 0.04545454541673915,\n",
-       " 'AMGN': 0.011363636400441074,\n",
-       " 'GILD': 0.045454545454545456,\n",
-       " 'PG': 0.011363636403349454,\n",
-       " 'KO': 0.045454545454545456,\n",
-       " 'NKE': 0.0113636363735275,\n",
-       " 'PEP': 0.011363636395239494,\n",
-       " 'COST': 0.011363636419733786,\n",
-       " 'WMT': 0.011363636406450172,\n",
-       " 'TGT': 0.011363636363636364,\n",
-       " 'XOM': 0.02092956767504922,\n",
-       " 'CVX': 0.011363636381393915,\n",
-       " 'NEE': 0.024524977735861438,\n",
-       " 'DUK': 0.045454545425973256,\n",
-       " 'SO': 0.04545454544975764,\n",
-       " 'SLB': 0.0454545454212785,\n",
-       " 'MMM': 0.04545454532419513,\n",
+       " 'C': 0.04545454531595632,\n",
+       " 'JNJ': 0.011363636618370894,\n",
+       " 'UNH': 0.011363636363636364,\n",
+       " 'PFE': 0.04545454537670648,\n",
+       " 'ABBV': 0.011363636445131874,\n",
+       " 'MRK': 0.0454545451032702,\n",
+       " 'AMGN': 0.011363636683467465,\n",
+       " 'GILD': 0.045454545388570196,\n",
+       " 'PG': 0.01136363668813596,\n",
+       " 'KO': 0.04545454535945358,\n",
+       " 'NKE': 0.011363636636645679,\n",
+       " 'PEP': 0.01136363655649774,\n",
+       " 'COST': 0.011363636363636364,\n",
+       " 'WMT': 0.011363636758447298,\n",
+       " 'TGT': 0.011363636460992638,\n",
+       " 'XOM': 0.03409090806685955,\n",
+       " 'CVX': 0.011363636363636364,\n",
+       " 'NEE': 0.011363636745278398,\n",
+       " 'DUK': 0.045454545352450276,\n",
+       " 'SO': 0.04545454525624006,\n",
+       " 'SLB': 0.04545454510723596,\n",
+       " 'MMM': 0.04545454476785283,\n",
        " 'CAT': 0.011363636363636364,\n",
-       " 'HON': 0.011363636363636364,\n",
-       " 'GE': 0.045454545338718816,\n",
+       " 'HON': 0.01136363640283741,\n",
+       " 'GE': 0.045454544915212315,\n",
        " 'ADP': 0.011363636363636364,\n",
-       " 'AMZN': 0.011363636395483429,\n",
-       " 'META': 0.011363636364679217,\n",
+       " 'AMZN': 0.011363636981102597,\n",
+       " 'META': 0.011363637007417509,\n",
        " 'HD': 0.011363636363636364,\n",
        " 'VZ': 0.045454545454545456}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1860,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1871,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2048,7 +2048,7 @@
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>XOM</td>\n",
-       "      <td>0.020930</td>\n",
+       "      <td>0.034091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
@@ -2058,7 +2058,7 @@
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>NEE</td>\n",
-       "      <td>0.024525</td>\n",
+       "      <td>0.011364</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -2155,9 +2155,9 @@
        "26   COST  0.011364\n",
        "27    WMT  0.011364\n",
        "28    TGT  0.011364\n",
-       "29    XOM  0.020930\n",
+       "29    XOM  0.034091\n",
        "30    CVX  0.011364\n",
-       "31    NEE  0.024525\n",
+       "31    NEE  0.011364\n",
        "32    DUK  0.045455\n",
        "33     SO  0.045455\n",
        "34    SLB  0.045455\n",
@@ -2172,7 +2172,7 @@
        "43     VZ  0.045455"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2198,7 +2198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
