--- a/Hanyong/Team1_v3.ipynb
+++ b/Hanyong/Team1_v3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "47d30a3c-0d16-4857-8454-982234346454",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "46c0d52e-3ef5-4ec3-86ea-0352cd6d1068",
    "metadata": {
     "scrolled": true
@@ -165,7 +165,7 @@
        "[846012 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,15 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "478cacf5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "3e64f694-19de-4198-8008-21d644e0e25a",
    "metadata": {
     "scrolled": true
@@ -575,7 +567,7 @@
        "[1549 rows x 499 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "7ae13354-5864-4db7-ac9c-008022739d43",
    "metadata": {},
    "outputs": [
@@ -612,7 +604,7 @@
        "Length: 499, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "id": "6dc43b4a-3941-4f97-b89e-7d7b8e5c185a",
    "metadata": {},
    "outputs": [
@@ -670,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "id": "756015da",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1001,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1549 rows × 480 columns</p>\n",
+       "<p>1549 rows × 485 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1055,20 +1047,20 @@
        "2023-10-09    118.91  110.69  222.58  33.97  174.60  \n",
        "2023-10-10    120.37  112.19  222.40  35.12  175.63  \n",
        "\n",
-       "[1549 rows x 480 columns]"
+       "[1549 rows x 485 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#nan값이 178가 아닌 종목들을 drop\n",
+    "#nan값이 178이상인 종목들을 drop\n",
     "\n",
     "nan_counts = a.isna().sum()\n",
     "\n",
-    "columns_to_drop = nan_counts[nan_counts != 178].index.tolist()\n",
+    "columns_to_drop = nan_counts[nan_counts > 178].index.tolist()\n",
     "\n",
     "a_filtered = a.drop(columns=columns_to_drop)\n",
     "\n",
@@ -1077,49 +1069,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "af8385c9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pricingDate\n",
-       "2018-05-06    True\n",
-       "2018-05-13    True\n",
-       "2018-05-20    True\n",
-       "2018-05-27    True\n",
-       "2018-05-28    True\n",
-       "              ... \n",
-       "2023-08-20    True\n",
-       "2023-09-04    True\n",
-       "2023-09-10    True\n",
-       "2023-09-17    True\n",
-       "2023-10-01    True\n",
-       "Length: 178, dtype: bool"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# nan값이 178개인 종목들이 모두 같은날에 데이터가 없는건지 확인\n",
-    "\n",
-    "nan_positions = a_filtered.isna()\n",
-    "\n",
-    "all_nan_same_days = nan_positions.all(axis=1)\n",
-    "\n",
-    "days_with_all_nan = all_nan_same_days[all_nan_same_days]\n",
-    "\n",
-    "days_with_all_nan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "92dce137",
+   "execution_count": 46,
+   "id": "ef198095",
    "metadata": {},
    "outputs": [
     {
@@ -1457,7 +1408,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1371 rows × 480 columns</p>\n",
+       "<p>1371 rows × 485 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1503,24 +1454,22 @@
        "2023-10-09    118.91  110.69  222.58  33.97  174.60  \n",
        "2023-10-10    120.37  112.19  222.40  35.12  175.63  \n",
        "\n",
-       "[1371 rows x 480 columns]"
+       "[1371 rows x 485 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 해당 날짜들 drop \n",
-    "# 일단 최종적으로 SnP500 지수는 총 480종목을 볼 것임\n",
+    "# NaN값이 178개 이상인 종목들을 drop한 후 저장\n",
+    "# 일단 최종적으로 SnP500 지수는 총 485종목을 볼 것임\n",
     "# 5년의 기간에서 178일을 제거\n",
     "\n",
-    "a_cleaned = a_filtered.drop(days_with_all_nan[days_with_all_nan].index)\n",
-    "\n",
-    "a_cleaned.to_csv('/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/new_market.csv')\n",
-    "\n",
-    "a_cleaned\n"
+    "a_filtered = a_filtered.dropna(axis=0)\n",
+    "a_filtered.to_csv('/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/new_market.csv')\n",
+    "a_filtered"
    ]
   },
   {
