--- a/Hanyong/Team1_v2.ipynb
+++ b/Hanyong/Team1_v2.ipynb
@@ -29,10 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "47d30a3c-0d16-4857-8454-982234346454",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'cplex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Hanyong/Team1_v2.ipynb 셀 3\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Hanyong/Team1_v2.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Hanyong/Team1_v2.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcvxpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mcp\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Hanyong/Team1_v2.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcplex\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Hanyong/Team1_v2.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpypfopt\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mefficient_frontier\u001b[39;00m \u001b[39mimport\u001b[39;00m EfficientFrontier\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jaekyunpark/Documents/GitHub/S-PQuantTeam01/Hanyong/Team1_v2.ipynb#W2sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpypfopt\u001b[39;00m \u001b[39mimport\u001b[39;00m risk_models\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'cplex'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import cvxpy as cp\n",
