--- a/Jiyoung/JY_15_ticker_simpleEPO.ipynb
+++ b/Jiyoung/JY_15_ticker_simpleEPO.ipynb
@@ -742,7 +742,7 @@
     "# 상관관계 축소를 위한 λ 값 설정 (예시로 0.75를 사용)\n",
     "lambda_shrinkage = 0.75\n",
     "\n",
-    "# Convert DataFrame to NumPy array and ensure it's symmetric\n",
+    "# 대칭 행렬로 조정 (Convert DataFrame to NumPy array and ensure it's symmetric)\n",
     "cov_matrix_np = cov_matrix.to_numpy()\n",
     "cov_matrix_symmetric = (cov_matrix_np + cov_matrix_np.T) / 2\n",
     "\n",
