--- a/Jiyoung/1124/EPO_rebalancing.ipynb
+++ b/Jiyoung/1124/EPO_rebalancing.ipynb
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2479,7 +2479,7 @@
     "    initial = 10000  # 초기 투자 금액 (1만 달러)\n",
     "\n",
     "      # 시작 시점 기준 3개월 뒤 시점\n",
-    "    dates = pd.date_range(start, end, freq='2M')\n",
+    "    dates = pd.date_range(start, end, freq='3M')\n",
     "    # ['2023-05-01', '2023-08-01']\n",
     "\n",
     "    for i in range(len(dates)):\n",
@@ -2501,7 +2501,8 @@
     "        opt_w = list(gmv_epo(stocks_15, start, lookback))  # 리밸런싱 시점에서의 최적 가중치 w**\n",
     "\n",
     "        # 초기 투자 주식 보유량 (XX주)\n",
-    "        count_stocks = list(np.divide(np.multiply(opt_w, [initial] * len(ticker_lst), lst_now)))  \n",
+    "        a = list(np.multiply(opt_w, ([initial] * len(ticker_lst) ) ) )\n",
+    "        count_stocks= list(np.divide(a, lst_now) )  \n",
     "\n",
     "        # 3개월 동안의 투자 수익률 확인 (소수점 단위) : (3개월 뒤 시점의 payoff - start 시점의 payoff) / start 시점의 payoff\n",
     "        ret_3m = ((sum(np.multiply(count_stocks, lst_3m)) - initial) / initial)\n",
@@ -2517,18 +2518,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_11420\\2196654013.py:20: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
+      "100%|██████████| 15/15 [00:00<00:00, 1147.36it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start = '2023-05-01'\n",
+    "end =  '2023-10-01'\n",
+    "dates = pd.date_range(start, end, freq='3M')\n",
+    "i=0\n",
+    "start = dates[i]\n",
+    "rebal = start + pd.DateOffset(months=3) - pd.DateOffset(days=1)\n",
+    "opt_w = list(gmv_epo(stocks_15, start, 1))\n",
+    "len(stocks_15)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 335.97519211,  592.94404521,  681.5689405 ,  573.57715423,\n",
+       "         794.63702299,  807.43986476,  866.74241221,  598.59057572,\n",
+       "        1046.05651995,  677.10817362,  554.28862601,  465.15730428,\n",
+       "         874.22497133,  521.64108326,  610.0481138 ]])"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.multiply([10000]*15, [opt_w])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_11420\\2537357954.py:20: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
       "  lst_3m.append(float(price_3m[i]))\n",
-      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_11420\\2196654013.py:26: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
+      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_11420\\2537357954.py:26: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
       "  lst_now.append(float(price_now[j]))\n",
-      "100%|██████████| 15/15 [00:00<00:00, 1248.97it/s]\n"
+      "100%|██████████| 15/15 [00:00<00:00, 1249.74it/s]\n"
      ]
     },
     {
@@ -2540,20 +2606,21 @@
     },
     {
      "ename": "TypeError",
-     "evalue": "return arrays must be of ArrayType",
+     "evalue": "cannot convert the series to <class 'float'>",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Yoojiyoung\\OneDrive - 경희대학교\\문서\\GitHub\\SNPQuantTeam01\\Jiyoung\\1124\\EPO_rebalancing.ipynb Cell 40\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ret, money \u001b[39m=\u001b[39m my_return(\u001b[39m'\u001b[39;49m\u001b[39m2023-05-01\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m2023-10-01\u001b[39;49m\u001b[39m'\u001b[39;49m, tickers_15, \u001b[39m1\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m ret, money\n",
-      "\u001b[1;32mc:\\Users\\Yoojiyoung\\OneDrive - 경희대학교\\문서\\GitHub\\SNPQuantTeam01\\Jiyoung\\1124\\EPO_rebalancing.ipynb Cell 40\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m opt_w \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(gmv_epo(stocks_15, start, lookback))  \u001b[39m# 리밸런싱 시점에서의 최적 가중치 w**\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39m# 초기 투자 주식 보유량 (XX주)\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m count_stocks \u001b[39m=\u001b[39m (np\u001b[39m.\u001b[39mdivide(np\u001b[39m.\u001b[39;49mmultiply(opt_w, [initial] \u001b[39m*\u001b[39;49m \u001b[39mlen\u001b[39;49m(ticker_lst), lst_now)))  \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m \u001b[39m# 3개월 동안의 투자 수익률 확인 (소수점 단위) : (3개월 뒤 시점의 payoff - start 시점의 payoff) / start 시점의 payoff\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m ret_3m \u001b[39m=\u001b[39m ((\u001b[39msum\u001b[39m(np\u001b[39m.\u001b[39mmultiply(count_stocks, lst_3m)) \u001b[39m-\u001b[39m initial) \u001b[39m/\u001b[39m initial)\n",
-      "\u001b[1;31mTypeError\u001b[0m: return arrays must be of ArrayType"
+      "\u001b[1;32mc:\\Users\\Yoojiyoung\\OneDrive - 경희대학교\\문서\\GitHub\\SNPQuantTeam01\\Jiyoung\\1124\\EPO_rebalancing.ipynb Cell 42\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ret, money \u001b[39m=\u001b[39m my_return(\u001b[39m'\u001b[39;49m\u001b[39m2023-05-01\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m2023-10-01\u001b[39;49m\u001b[39m'\u001b[39;49m, tickers_15, \u001b[39m1\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m ret, money\n",
+      "\u001b[1;32mc:\\Users\\Yoojiyoung\\OneDrive - 경희대학교\\문서\\GitHub\\SNPQuantTeam01\\Jiyoung\\1124\\EPO_rebalancing.ipynb Cell 42\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m lst_3m \u001b[39m=\u001b[39m [] \u001b[39m# 3개월 뒤 시점의 종가 저장 리스트\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m price_3m\u001b[39m.\u001b[39mcolumns:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     lst_3m\u001b[39m.\u001b[39mappend(\u001b[39mfloat\u001b[39;49m(price_3m[i]))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39m# w* 이용하여 start 시점 당시의 초기 투자량 확인\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Yoojiyoung/OneDrive%20-%20%EA%B2%BD%ED%9D%AC%EB%8C%80%ED%95%99%EA%B5%90/%EB%AC%B8%EC%84%9C/GitHub/SNPQuantTeam01/Jiyoung/1124/EPO_rebalancing.ipynb#X62sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m price_now \u001b[39m=\u001b[39m mkt_out\u001b[39m.\u001b[39mloc[start:, ticker_lst][\u001b[39m0\u001b[39m:\u001b[39m1\u001b[39m]  \u001b[39m# start 시점의 종가 df\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\Yoojiyoung\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\pandas\\core\\series.py:230\u001b[0m, in \u001b[0;36m_coerce_method.<locals>.wrapper\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    222\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m    223\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCalling \u001b[39m\u001b[39m{\u001b[39;00mconverter\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m on a single element Series is \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    224\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mdeprecated and will raise a TypeError in the future. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    227\u001b[0m         stacklevel\u001b[39m=\u001b[39mfind_stack_level(),\n\u001b[0;32m    228\u001b[0m     )\n\u001b[0;32m    229\u001b[0m     \u001b[39mreturn\u001b[39;00m converter(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m])\n\u001b[1;32m--> 230\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcannot convert the series to \u001b[39m\u001b[39m{\u001b[39;00mconverter\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: cannot convert the series to <class 'float'>"
      ]
     }
    ],
    "source": [
     "ret, money = my_return('2023-05-01', '2023-10-01', tickers_15, 1)\n",
-    "ret, money"
+    "ret, money\n"
    ]
   },
   {
