--- a/Jiyoung/1124/EPO_rebalancing.ipynb
+++ b/Jiyoung/1124/EPO_rebalancing.ipynb
@@ -2488,7 +2488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2533,6 +2533,7 @@
     "\n",
     "        # 3개월 후 총 투자 (손)수익 (달러)\n",
     "        total_ret_3m = initial * (1 + ret_3m)\n",
+    "        initial = total_ret_3m\n",
     "        money_rebal.append(total_ret_3m)\n",
     "\n",
     "    return ret_rebal, money_rebal"
@@ -2540,21 +2541,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_18084\\2590150443.py:20: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
+      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_18084\\1565338488.py:20: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
       "  lst_3m.append(float(price_3m[i]))\n",
-      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_18084\\2590150443.py:26: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
+      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_18084\\1565338488.py:26: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
       "  lst_now.append(float(price_now[j]))\n",
-      "100%|██████████| 15/15 [00:00<00:00, 1153.53it/s]\n",
-      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_18084\\2590150443.py:20: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
+      "100%|██████████| 15/15 [00:00<00:00, 1241.02it/s]\n",
+      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_18084\\1565338488.py:20: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
       "  lst_3m.append(float(price_3m[i]))\n",
-      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_18084\\2590150443.py:26: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
+      "C:\\Users\\Yoojiyoung\\AppData\\Local\\Temp\\ipykernel_18084\\1565338488.py:26: FutureWarning: Calling float on a single element Series is deprecated and will raise a TypeError in the future. Use float(ser.iloc[0]) instead\n",
       "  lst_now.append(float(price_now[j]))\n"
      ]
     },
@@ -2569,7 +2570,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 15/15 [00:00<00:00, 1064.22it/s]\n"
+      "100%|██████████| 15/15 [00:00<00:00, 1148.18it/s]\n"
      ]
     },
     {
@@ -2582,11 +2583,11 @@
     {
      "data": {
       "text/plain": [
-       "([0.12344413810176338, -0.10340440542549113],\n",
-       " [11234.441381017634, 8965.955945745089])"
+       "([0.12344413810176338, -0.10340440542549137],\n",
+       " [11234.441381017634, 10072.75064972597])"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2594,6 +2595,16 @@
    "source": [
     "ret, money = my_return('2023-05-01', '2023-10-01', tickers_15, 1)\n",
     "ret, money"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# epo+max sharpe\n",
+    "# epo+max return"
    ]
   },
   {
