--- a/Jaekyun/Market_preprocessing.ipynb
+++ b/Jaekyun/Market_preprocessing.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#SnP 구성 종목들만 필터링\n",
+    "#SnP500 구성 종목들만 필터링\n",
     "snP500_symbols = SnP500['Symbol'].unique()\n",
     "market1_filtered = market1_usd[market1_usd['tickerSymbol'].isin(snP500_symbols)]\n",
     "market2_filtered = market2_usd[market2_usd['tickerSymbol'].isin(snP500_symbols)]\n",
