--- a/Jaekyun/ChatGPT-4_API.ipynb
+++ b/Jaekyun/ChatGPT-4_API.ipynb
@@ -191,6 +191,8 @@
     }
    ],
    "source": [
+    "# GPT-4 종목선정\n",
+    "\n",
     "# 결과를 저장할 데이터프레임 생성\n",
     "results_df = pd.DataFrame(columns=['Fund', 'Ticker Symbols'])\n",
     "\n",
@@ -236,6 +238,51 @@
    "outputs": [],
    "source": [
     "results_df.to_csv('./gpt-15.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 선정된 15, 30, 45개 종목 포트폴리오의 GPT-weighted 가중치 추출\n",
+    "\n",
+    "# 결과를 저장할 데이터프레임 생성\n",
+    "results_df_weights = pd.DataFrame(columns=['Portfolio Strategy', 'Ticker and Weights'])\n",
+    "\n",
+    "# 30번 반복 실행\n",
+    "for i in range(30):\n",
+    "    # Prompt 3 실행\n",
+    "    # Prompt 2의 출력 결과를 input으로 사용\n",
+    "    prompt_3_response = client.chat.completions.create(\n",
+    "        model=\"gpt-4-1106-preview\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"Assume you're designing a theoretical model portfolio from these S&P500 stocks: {input}. Provide a hypothetical example of how you might distribute the weightage of these stocks (normalized, i.e., weights should add up to 1.00) in the portfolio to potentially outperform the S&P500 index. Also mention the underlying strategy or logic which you used to assign these weights.\"},\n",
+    "            {\"role\": \"user\", \"content\": f\"{ticker_symbols}\"}\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    # Prompt 3의 결과\n",
+    "    portfolio_strategy = prompt_3_response.choices[0].message.content\n",
+    "\n",
+    "    # Prompt 4 실행\n",
+    "    prompt_4_response = client.chat.completions.create(\n",
+    "        model=\"gpt-4-1106-preview\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"Extract tickers of stocks and corresponding weights as a single comma ',' separated string, with the weights expressed as floats: '{input}'.\"},\n",
+    "            {\"role\": \"user\", \"content\": f\"{portfolio_strategy}\"}\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    # Prompt 4의 결과\n",
+    "    ticker_and_weights = prompt_4_response.choices[0].message.content\n",
+    "\n",
+    "    # 결과를 데이터프레임에 추가\n",
+    "  results_df_weights = results_df_weights.append({'Portfolio Strategy': portfolio_strategy, 'Ticker and Weights': ticker_and_weights}, ignore_index=True)\n",
+    "\n",
+    "# 데이터프레임 출력\n",
+    "print(results_df_weights)"
    ]
   }
  ],
